[package]
name = "ChatWithDynamoDB"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version= "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.23.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5.0"
httparse = "1.8.0"
