[package]
name = "chat_with_dynamodb"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.23.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5.0"
httparse = "1.8.0"
uuid = { version = "1.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
