[package]
name = "jivachat"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.4.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.28.0"
anyhow = "1.0"
reqwest = {version = "0.11",features = ["json", "stream"]}
regex = "0.1.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5.0"
httparse = "1.8.0"
serde_with = "3.8"
uuid = { version = "1.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
